...
    let interpretation:  String
    let dailyQuote:      String

    static let mock = CosmicProfile(
        birthData: {
            var b = BirthData()
            b.name = "Layla"
            b.birthPlace = "München, Deutschland"
            return b
        }(),
        westernData:    .mock,
        baziData:       .mock,
        wuxingData:     .mock,
...
